--- a/requirements.txt
+++ b/requirements.txt
@@ -36,9 +36,9 @@ requests-oauthlib==1.3.0
 rsa==4.0
 scipy>1.4.1
 six==1.14.0
-tensorboard==1.13.1
-tensorflow==1.13.1
-tensorflow-estimator==1.13.1
+tensorboard==2.0.0b1
+tensorflow==2.0.0b1
+tensorflow-estimator==2.0.0b1
 termcolor==1.1.0
 urllib3==1.25.9
 Werkzeug==1.0.1
