--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ scipy>1.4.1
 six==1.14.0
 tensorboard==1.13.1
 tensorflow==1.13.1
-tensorflow-estimator==1.13.1
+tensorflow-estimator>1.13.1
 termcolor==1.1.0
 urllib3==1.25.9
 Werkzeug==1.0.1
